# verum

./: .codecov.yml  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.ko.md  README.md  SECURITY.md  docker-compose.integration.yml  docker-compose.test.yml  docker-compose.yml  railway.toml  sonar-project.properties
.claude/: README.md  settings.json
.claude/agents/: test-coverage-auditor.md  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.scamanager/: config.json  install-hook.sh
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/.claude/hooks/: post_test_edit.py
apps/api/alembic/: README.md  env.py
apps/api/alembic/versions/: 0001_phase1_analyze.py  0002_phase2_infer_harvest.py  0003_voyage_embeddings.py  0004_users_and_repo_owner.py  0005_verum_jobs.py  0006_phase3_generate.py  0007_rag_configs_unique.py  0008_metric_profile_deployments.py  0009_phase4a_observe.py  0010_phase4b_experiment_evolve.py  0011_usage_quotas.py  0013_unique_evolve_job.py  0014_deployment_api_keys.py  0015_notify_trigger.py  0016_drop_chunks_embedding_jsonb.py  0017_add_missing_indexes.py  0018_chunks_inference_fk.py  0019_lookup_indexes.py  0019_sdk_pr_requests.py  0020_row_level_security.py  0021_rls_roles.py  0022_force_row_level_security.py  0023_otlp_trace_attrs.py  0024_sdk_pr_mode.py  0025_integrations.py  0026_webhook_subscriptions.py
apps/api/src/: config.py  main.py
apps/api/src/auth/: __init__.py  dependencies.py  jwt_verifier.py
apps/api/src/db/: README.md  enums.py  error_helpers.py  helpers.py  session.py
apps/api/src/db/models/: __init__.py  analyses.py  chunks.py  generations.py  harvest_sources.py  inferences.py  repos.py  traces.py  users.py
apps/api/src/integrations/: README.md
apps/api/src/integrations/github/: router.py
apps/api/src/loop/: email.py  llm_client.py  quota.py  utils.py
apps/api/src/loop/analyze/: README.md  __init__.py  cli.py  cloner.py  models.py  pipeline.py  prompts.py  python_analyzer.py  repository.py  router.py  typescript.py
apps/api/src/loop/deploy/: README.md  engine.py  models.py  orchestrator.py  repository.py
apps/api/src/loop/evolve/: README.md  engine.py  repository.py
apps/api/src/loop/experiment/: README.md  engine.py  models.py  repository.py
apps/api/src/loop/generate/: README.md  engine.py  metric_profile.py  models.py  repository.py
apps/api/src/loop/harvest/: README.md  __init__.py  chunker.py  crawler.py  embedder.py  pipeline.py  repository.py  router.py
apps/api/src/loop/infer/: README.md  __init__.py  cli.py  engine.py  models.py  repository.py  router.py
apps/api/src/loop/observe/: README.md  models.py  repository.py
apps/api/src/worker/: chain.py  listener.py  main.py  payloads.py  runner.py  utils.py
apps/api/src/worker/handlers/: analyze.py  deploy.py  evolve.py  generate.py  harvest.py  infer.py  judge.py  retrieve.py  webhook.py
apps/api/tests/: README.md  conftest.py  test_health.py  test_quota.py
apps/api/tests/db/: test_session.py
apps/api/tests/loop/: test_email.py  test_llm_client.py  test_utils.py
apps/api/tests/loop/analyze/: test_cloner.py  test_models.py  test_pipeline.py  test_prompts.py  test_python_analyzer.py  test_repository.py  test_router.py  test_typescript.py  test_typescript_extra.py
apps/api/tests/loop/deploy/: test_engine.py  test_orchestrator.py  test_repository.py
apps/api/tests/loop/evolve/: test_engine.py  test_repository.py
apps/api/tests/loop/experiment/: test_engine.py  test_models.py  test_repository.py
apps/api/tests/loop/generate/: test_engine.py  test_metric_profile.py  test_models.py  test_repository.py
apps/api/tests/loop/harvest/: test_chunker.py  test_chunking_strategy.py  test_crawler_security.py  test_embedder.py  test_pipeline.py  test_playwright_crawler.py  test_repository.py
apps/api/tests/loop/infer/: test_engine.py  test_models.py  test_repository.py  test_router.py
apps/api/tests/loop/observe/: test_repository.py
apps/api/tests/worker/: test_chain.py  test_listener.py  test_payloads.py  test_runner.py  test_utils.py
apps/api/tests/worker/handlers/: test_analyze_handler.py  test_deploy_handler.py  test_evolve_handler.py  test_generate_handler.py  test_harvest_chain.py  test_infer_handler.py  test_judge.py  test_retrieve_handler.py  test_webhook.py
docs/: API.md  ARCHITECTURE.md  BACKLOG.md  CASE_STUDY.md  CODE_QUALITY_REPORT.md  COMPARISON.md  DECISIONS.md  DEPLOY.md  GLOSSARY.md  HN_LAUNCH.md  INDEX.md  INTEGRATION.md  LOOP.md  METHODOLOGY.md  MIGRATION_v0_to_v1.md  QUICKSTART.md  REMAINING.md  ROADMAP.md  SDK_PYTHON.md  SDK_TYPESCRIPT.md  SELF_HOSTING.md  STATUS.md  WEEKLY.md  integration-tests.md  launch-remaining.md  migration-notes.md
scripts/: README.md  patch-coverage.sh  run_arcana_loop.ps1  seed_demo.py
(+271 files in other folders)
