# Phase 0 stub — dependencies from CLAUDE.md §🏗 기술 스택
# Not all packages are installed yet; add as each phase implements its stage.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "verum-api"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pydantic>=2.13.3",
    # DB + job queue
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "pgvector>=0.3",
    # ANALYZE — static analysis
    "tree-sitter>=0.25.2",
    "tree-sitter-typescript>=0.23",
    "typer>=0.12",
    # INFER + HARVEST — AI + crawling
    "anthropic>=0.49",
    "httpx>=0.27",
    "trafilatura>=2.0.0",
    "playwright>=1.49",
    # EXPERIMENT — Bayesian A/B scoring
    "scipy>=1.13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.23.1",
    "ruff>=0.4",
    "pylint>=3",
    "bandit>=1.7",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "requires_db: test requires a real Postgres connection (auto-skipped without reachable DB)",
]

[tool.coverage.run]
source = ["src"]
relative_files = true
omit = [
  "src/loop/analyze/cli.py",
  "src/loop/infer/cli.py",
  "src/loop/harvest/cli.py",
  "src/main.py",
  "src/worker/main.py",
]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
