# Phase 0 stub — dependencies from CLAUDE.md §🏗 기술 스택
# Not all packages are installed yet; add as each phase implements its stage.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "verum-api"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    # Core
    "pydantic>=2.13.3,<3.0",
    # DB + job queue
    "sqlalchemy[asyncio]>=2.0.49,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.31.0,<1.0",
    "pgvector>=0.3,<1.0",
    # ANALYZE — static analysis
    "tree-sitter>=0.25.2,<1.0",
    "tree-sitter-typescript>=0.23,<1.0",
    "typer>=0.24.2,<1.0",
    # INFER + HARVEST — AI + crawling
    "anthropic>=0.49,<2.0",
    "httpx>=0.28.1,<1.0",
    "trafilatura>=2.0.0,<3.0",
    "playwright>=1.49,<2.0",
    # EXPERIMENT — Bayesian A/B scoring
    "scipy>=1.17.1,<2.0",
    "numpy>=1.26,<3.0",
    # Email delivery
    "aiosmtplib>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.4",
    "pylint>=3",
    "bandit>=1.7",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov-fail-under=95"
markers = [
  "requires_db: test requires a real Postgres connection (auto-skipped without reachable DB)",
]

[tool.coverage.run]
source = ["src"]
relative_files = true
omit = [
  "src/loop/analyze/cli.py",
  "src/loop/infer/cli.py",
  "src/loop/harvest/cli.py",
  "src/main.py",
  "src/worker/main.py",
]

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
